<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_dash_board"/>
    <item
        android:id="@+id/person"
        android:title="@string/person"
        android:icon="@drawable/ic_email"/>
    <item
        android:id="@+id/notification"
        android:title="@string/notification"
        android:icon="@drawable/ic_notification"/>
    <item
        android:id="@+id/calendar"
        android:title="@string/calendar"
        android:icon="@drawable/ic_calendar"/>
    <item
        android:icon="@drawable/ic_calendar"
        android:id="@+id/statistic"
        android:title="@string/statistic" />
    <item
        android:id="@+id/setting"
        android:title="@string/setting"
        android:icon="@drawable/ic_setting"/>
</menu>