<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginHorizontal="20dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:text="@string/fyneen"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rgSection"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_weight="1"
            android:button="@color/transparent"
            android:text="@string/personal"
            android:layout_marginEnd="5dp"
            android:background="@drawable/checked_radio_button"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/rbBusiness"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:button="@color/transparent"
            android:text="@string/business"
            android:background="@drawable/button_border_shape"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pageRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="20dp"
        android:background="@color/gray"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:text="@string/dark_mode"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="1"
            tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/ic_launcher"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="18sp"
                android:text="omiko valishvili"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="omikovalishvili@gmail.com"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_more"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
